--- a/static/template.html
+++ b/static/template.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Docs</title>
-    <meta content="Description" name="description">
-    <meta content="Docs" name="author">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <title>$$TITLE$$</title>
+    <meta name="description" content="$$DESCRIPTION$$">
+    <meta name="author" content="$$AUTHOR$$">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css" rel="stylesheet">
     <link href="css/doc.css" rel="stylesheet">
     <link href="css/default.min.css" rel="stylesheet">
-    <script src="js/highlight.js">
-    </script>
+    <script src="js/highlight.js"></script>
     <script>
         hljs.initHighlightingOnLoad();
     </script>
