--- a/static/template.html
+++ b/static/template.html
@@ -5,18 +5,15 @@
     <title>$$TITLE$$</title>
     <meta name="description" content="$$DESCRIPTION$$">
     <meta name="author" content="$$AUTHOR$$">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css" rel="stylesheet">
-    <link href="css/doc.css" rel="stylesheet">
-    <link href="css/default.min.css" rel="stylesheet">
-    <script src="js/highlight.js"></script>
-    <script>
-        hljs.initHighlightingOnLoad();
-    </script>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
-    <div class="seventyfive-percent centered-block">
+    <div class="container">
         $$CONTENT$$        
     </div>
 </body>
