Added basic styling for the doc title.

--- a/static/template.html
+++ b/static/template.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>$$TITLE$$</title>
     <meta name="description" content="$$DESCRIPTION$$">
     <meta name="author" content="$$AUTHOR$$">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <link rel="stylesheet" href="css/docs.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 </head>
-<body>
+
+<body class="default">
     <div class="container">
-        $$CONTENT$$        
+        $$CONTENT$$
     </div>
 </body>
+
 </html>
