Added basic styling to headers and footer.

--- a/static/template.html
+++ b/static/template.html
@@ -17,9 +17,10 @@
     </script>
 </head>
 
-<body class="default">
+<body>
     <div class="container">
         $$CONTENT$$
+        <footer>Built with <a href="https://github.com/karakanb/frank" target="_blank">Frank</a>.</footer>
     </div>
 </body>
 
