--- a/static/template.html
+++ b/static/template.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         $$CONTENT$$
-        <footer>Built with <a href="https://github.com/karakanb/frank" target="_blank">Frank</a>.</footer>
+        <footer>Built with &hearts; & <a href="https://github.com/karakanb/frank" target="_blank">Frank</a>.</footer>
     </div>
 </body>
 
